--- a/install-editor.qmd
+++ b/install-editor.qmd
@@ -54,7 +54,7 @@ The following installation are required on your personal computers to move forwa
 ### **Select an option appropriate for your operating system**
 <!-- <div id="steps"></div> -->
 
-#### **MacOS:**
+### **MacOS:**
 
 <!-- - **Step 1**: [Install Anaconda for Mac](anaconda-mac.qmd) -->
 
@@ -66,11 +66,16 @@ The following installation are required on your personal computers to move forwa
 
 - **Step 3:** Download and install **[VS Code for macOS](vscode-mac.qmd)**  
 
-- **Step 4:** Install Git for Mac
+- **Step 4:** Install Git for Mac: [Check wiki-page to learn what Git is all about](https://en.wikipedia.org/wiki/Git)
+  - Git may already be installed on your Mac.
+  - Follow installation instructions to check your git-installation **[here](git-mac.qmd)** 
 
 - **Step 5:** Create a GitHub account 
+  - If you already have a GitHub account you may skipt this step
+  - Othewrise, follow instructions **[here](github-acct.qmd)**
 
 - **Step 6:** Create a GitHub repo
+  - Follow instructions **[here](github-repo.qmd)**
 
 - **Step 7:** Download and install **[Chrome web browser](https://www.google.com/chrome/browser-tools/)**
   - Skip this step if you already have Chrome installed on your laptop.
@@ -83,7 +88,7 @@ The following installation are required on your personal computers to move forwa
 
 <!-- - **Step 5:** [Install Python and Jupyter without Anaconda](python3-mac.qmd) -->
 
-#### **Windows:**
+### **Windows:**
 
 <!-- - **Step 1**: [Install Anaconda for Windows](anaconda-windows.qmd) -->
 
@@ -95,11 +100,15 @@ The following installation are required on your personal computers to move forwa
 
 - **Step 3:** Download and install **[VS Code for Windows](vscode-windows.qmd)**
 
-- **Step 4:** Install Git for Windows
+- **Step 4:** Install Git for Windows: [Check wiki-page to learn what Git is all about](https://en.wikipedia.org/wiki/Git)
+  - Follow installations instructions **[here](git-windows.qmd)**
 
 - **Step 5:** Create a GitHub account 
+  - If you already have a GitHub account you may skipt this step
+  - Othewrise, follow instructions **[here](github-acct.qmd)**
 
 - **Step 6:** Create a GitHub repo
+  - Follow instructions **[here](github-repo.qmd)**
 
 - **Step 7:** Download and install **[Chrome web browser](https://www.google.com/chrome/browser-tools/)**
   - Skip this step if you already have Chrome installed on your laptop.
