--- a/index.qmd
+++ b/index.qmd
@@ -63,12 +63,13 @@ Course registation is NOW OPEN.
 <br>
 
 ### Github Repo (updated weekly)
-```python
-TBA
-```
 <!-- ```python
-git clone git@github.com:gwu-csci3907/Spring2024.git
+TBA
 ``` -->
+
+```python
+git clone https://github.com/gwu-mae6291-iot/spring2025_codes.git
+```
 
 ### Course description
 The Internet of Things (IoT) is perceived as a collection of smart, connected devices with the ability to send and receive data; “internet” encapsulates connectivity and “things” are devices (electronic or mechanical) that can be adapted toward connectivity. 
