--- a/policies.qmd
+++ b/policies.qmd
@@ -83,11 +83,11 @@ Bulusu, Kartik V. (2025, January). MAE 6291: Internet-of-Things for Engineers. [
          <li>Python programming and other Homework 10% </li>
          <li>In-class or offline presentations 10% </li>           
          <li>Guest lecture reports 10% </li> 
-         <li>Paper reviews of seleted archival journals will be required in formats provided 10% </li> 
+         <li>Paper reviews of selected archival journals will be required in formats provided 10% </li> 
          <li>Projects (including code, demo, written report and presentation) 50% </li>  
          <ul>
-            <li>20% Midterm project (Individial)</li>
-            <li>30% Final project (Individial)</li>
+            <li>20% Midterm project (Individual)</li>
+            <li>30% Final project (Individual)</li>
          </ul>   
         </ul>
       </td>
