--- a/Week0.qmd
+++ b/Week0.qmd
@@ -17,9 +17,9 @@ Note: Slides cannot be viewed on mobile and handheld devives (such as phones and
 :::
 ![](Notes/MAE6291_IoT_Week0.pdf){width="100%" height="800px"}
 
-<footer>
+<!-- <footer>
   <p>This is a Quarto website. To learn more about Quarto websites visit <https://quarto.org/docs/websites>.<br>
   Author: Kartik Bulusu<br>
   Contact: <a href="mailto:bulusu@gwu.edu">bulusu</a><br>
   &copy; 2024 All rights reserved</p>
-</footer>
+</footer> -->
