--- a/schedule.qmd
+++ b/schedule.qmd
@@ -160,7 +160,7 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Setting up a Python virtual environment [venv] and it's benefits</li>
           <li style="color:black">Installing Python GPIO packages with pip in [venv]</li>
           <li style="color:black"><strong>Blinking LEDs on boot [Graded Lab Activity]</strong></li>
-          <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW1: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW1 Assigned: 02/04/2024; HW1 Due: 02/09/2024</strong> -->
+          <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW1: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW1 Assigned: 02/04/2024; HW1 Due: 02/09/2024</strong>
         </ul>
       </td>
       <!--- <td>Column content</td> -->
@@ -261,14 +261,13 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       </strong></td>
       <!--- <td>Column content</td> -->
     </tr>
-<!-- <tr class="table-secondary">
+<tr class="table-secondary">
       <th scope="row"> [03/11/2025]</th>
       <td colspan="2" style="text-align: center">Midterm Project Report due.
       <!-- <br><strong><a href="Downloads/LastName_HW_paper_review.docx" style="color:red;" target="_blank">Midterm project report template [Download Template]</a></strong> -->
       <br><strong><a href="Downloads/AlZaabi_AlmayoofSpring2023_ProjectReport.pdf" style="color:red;" target="_blank">Sample project report</a>
       </strong></td>
-      <!--- <td>Column content</td> -->
-    </tr> -->
+</tr>
 <tr class="table-secondary">
       <th scope="row"> [03/10/2025] to [03/15/2025]</th>
       <td colspan="2" style="text-align: center">Spring Break. 
@@ -278,24 +277,20 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
 
 
   
-<tr class="table-secondary">
+<!-- <tr class="table-secondary">
       <th scope="row"> Week 13 [04/23/2025]</th>
       <td colspan="2" style="text-align: center">Final Project Presentations and Live Demos due.
-      <!-- <br><strong><a href="Downloads/Midterm_presentation_template.pptx" style="color:red;" target="_blank">Final project presentation template [Download Template]</a>
-      </strong> -->
+      <br><strong><a href="Downloads/Midterm_presentation_template.pptx" style="color:red;" target="_blank">Final project presentation template [Download Template]</a>
+      </strong>
       </td> 
-      <!--- <td>Column content</td> -->
-    </tr>    
+</tr>     -->
 
-<tr class="table-secondary">
+<!-- <tr class="table-secondary">
       <th scope="row"> [04/30/2025]</th>
       <td colspan="2" style="text-align: center"> Final Project Report due (Tentatively!).
-      <!-- <br><strong><a href="Downloads/LastName_HW_paper_review.docx" style="color:red;" target="_blank">Final project report template [Download Template]</a>
-      </strong> -->
       <br><strong><a href="Downloads/AlZaabi_AlmayoofSpring2023_ProjectReport.pdf" style="color:red;" target="_blank">Sample project report</a>
       </strong></td>
-      <!--- <td>Column content</td> -->
-    </tr>
+</tr> -->
     
 <tr class="table-secondary">
       <th scope="row">[04/28/2025]</th>
