--- a/schedule.qmd
+++ b/schedule.qmd
@@ -147,8 +147,9 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Recap of some programming constructs</li>
           <li style="color:black">Using Thonny to blink LEDs</li>
           <li style="color:black">Using bash script to blink LEDs</li>
-          <li>Guest lecture: **Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications**
-         <!-- **Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications** by <a href="/Lectures_Speakers/HadiImran-bio-Feb232024.pdf" target="_blank">Hadi Mohammed</a>, Digital Technologies Director of Factory 4.0 <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a> -->
+          
+          <li>**Guest lecture:** *Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications*
+          by <a href="/Lectures_Speakers/HadiImran-bio-Jan292025.pdf" target="_blank">Hadi Mohammed</a>, Business Relations Manager and Former Digital Technologies Director of Factory 4.0, <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a>
           </li>          
           <!-- <li style="color:black"><a href="Week2.qmd" style="color:red;" target="_blank">Week-2 Notes</a></li> -->
         </ul>
@@ -161,6 +162,7 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Installing Python GPIO packages with pip in [venv]</li>
           <li style="color:black"><strong>Blinking LEDs on boot [Graded Lab Activity]</strong></li>
           <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW1: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW1 Assigned: 01/29/2025; HW1 Due: 02/05/2025</strong>
+          <li><strong><a href="Downloads/Midterm_Project_Proposal_MAE6291.docx" style="color:red;" target="_blank">Midterm Project Proposal [Download Template]</a></strong></li> <strong style="color:black">HW2 Assigned: 01/29/2025; HW2 Due: 02/12/2025</strong>
         </ul>
       </td>
       <!--- <td>Column content</td> -->
