--- a/Week2-Mohammad-PrattWhitney-Lecture.qmd
+++ b/Week2-Mohammad-PrattWhitney-Lecture.qmd
@@ -1,19 +1,19 @@
 ---
-title: "Week-5: Hadi Mohammad's Guest Lecture"
+title: "Week-2: Hadi Mohammad's Guest Lecture"
 format html:
 ---
 **This presentation for internal viewing and referencing only. Redistribution of the presentation is not permitted.**
 
-Mohammad, Hadi (2024, February 23). Industrial Internet of Things (IIOT), CSCI4907 Introduction to IoT and Edge Computing Applications [Intro. to IoT and Edge Comput. App.]. Department of Computer Science, The George Washington University. [https://gwu-csci3907.github.io](https://gwu-csci3907.github.io)
+Mohammad, Hadi (2025, January 29). Industrial Internet of Things (IIOT), CSCI4907 Introduction to IoT and Edge Computing Applications [Intro. to IoT and Edge Comput. App.]. Department of Computer Science, The George Washington University. [https://gwu-csci3907.github.io](https://gwu-csci3907.github.io)
 
 ::: {.callout-note appearance="simple"}
-**This presentation was made by Hadi Mohammad, Digital Technologies Director of Factory 4.0, Pratt & Whitney for CSCI 4907-Spring 2024.**
+**This presentation was made by Hadi Mohammad, Digital Technologies Director of Factory 4.0, Pratt & Whitney for MAE 6291-Spring 2025 and CSCI 4907-Spring 2024.**
 :::
 ![](Notes/IIOT_GWU_presentation_02172024.pdf){width="100%" height="800px"}
 
-<footer>
+<!-- <footer>
   <p>This is a Quarto website. To learn more about Quarto websites visit <https://quarto.org/docs/websites>.<br>
   Author: Kartik Bulusu<br>
   Contact: <a href="mailto:bulusu@gwu.edu">bulusu</a><br>
   &copy; 2024 All rights reserved</p>
-</footer>
+</footer> -->
