--- a/schedule.qmd
+++ b/schedule.qmd
@@ -146,21 +146,17 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Python skelton code for running programs on the Raspberry Pi</li>
           <li style="color:black">Recap of some programming constructs</li>
           <li style="color:black">Using Thonny to blink LEDs</li>
-          <li style="color:black">Using bash script to blink LEDs</li>
-          
+          <li><a href="Week2.qmd" style="color:red;" target="_blank">Week-2 Notes</a></li>
           <li>**Guest lecture:** *Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications*
           by <a href="/Lectures_Speakers/HadiImran-bio-Jan292025.pdf" target="_blank">Hadi Mohammed</a>, Business Relations Manager and Former Digital Technologies Director of Factory 4.0, <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a>
           </li>          
-          <!-- <li style="color:black"><a href="Week2.qmd" style="color:red;" target="_blank">Week-2 Notes</a></li> -->
+          <li style="color:black"><a href="Week2-Mohammad-PrattWhitney-Lecture.qmd" style="color:red;" target="_blank">Week2-Mohammad-PrattWhitney-Lecture</a></li>
         </ul>
       </td>
       <td>
         <ul>
           <li style="color:black">Configuring the GPIO interface on your Raspberry Pi</li>
           <li style="color:black">In-class Raspberry Pi Lab (Blinking LEDs)</li> 
-          <li style="color:black">Setting up a Python virtual environment [venv] and it's benefits</li>
-          <li style="color:black">Installing Python GPIO packages with pip in [venv]</li>
-          <li style="color:black"><strong>Blinking LEDs on boot [Graded Lab Activity]</strong></li>
           <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW1: Guest Lecture Summary [Download Template]</a></strong></li> <strong style="color:black">HW1 Assigned: 01/29/2025; HW1 Due: 02/05/2025</strong>
           <li><strong><a href="Downloads/Midterm_Project_Proposal_MAE6291.docx" style="color:red;" target="_blank">Midterm Project Proposal [Download Template]</a></strong></li> <strong style="color:black">HW2 Assigned: 01/29/2025; HW2 Due: 02/12/2025</strong>
         </ul>
@@ -177,7 +173,8 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li>Sensors</li>
           <li>Sensor types and considerations</li>
           <li>Understanding Analog and Digital Signals</li>
-          <li>Fundamentals of signal visualization in time and frequency</li>  
+          <li>Fundamentals of signal visualization in time and frequency</li> 
+          <li style="color:black">Using bash script to blink LEDs</li> 
           <!-- <li>Guest lecture: 
           **Designing high-confidence embedded systems -- operating systems and real-time**</a> by <a href="https://faculty.cs.gwu.edu/gparmer/"
           target="_blank">Prof. Gabe Parmer</a>, CS Department, GWU. <a href="https://composite.seas.gwu.edu" target="_blank">Parmer Lab</a> 
@@ -189,6 +186,9 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       </td>
       <td>
         <ul>
+          <li style="color:black">Setting up a Python virtual environment [venv] and it's benefits</li>
+          <li style="color:black">Installing Python GPIO packages with pip in [venv]</li>
+          <li style="color:black"><strong>Blinking LEDs on boot [Graded Lab Activity]</strong></li>  
           <li>In-class Raspberry Pi Lab (Ultrasound sensors)</li>
           <li>Proxmity sensing using Thonny IDE</li>
 <!--           <li>Proxmity sensing using bash script</li>
