--- a/Week2-Mohammad-PrattWhitney-Lecture.qmd
+++ b/Week2-Mohammad-PrattWhitney-Lecture.qmd
@@ -4,10 +4,11 @@ format html:
 ---
 **This presentation for internal viewing and referencing only. Redistribution of the presentation is not permitted.**
 
-Mohammad, Hadi (2025, January 29). Industrial Internet of Things (IIOT), CSCI4907 Introduction to IoT and Edge Computing Applications [Intro. to IoT and Edge Comput. App.]. Department of Computer Science, The George Washington University. [https://gwu-csci3907.github.io](https://gwu-csci3907.github.io)
+Mohammad, Hadi (2025, January 29). Industrial Internet of Things (IIOT), MAE6291: Internet of Things for Engineers. Department of Mechanical and Aerospace Engineering, The George Washington University.[https://gwu-mae6291-iot.github.io/spring2025/](https://gwu-mae6291-iot.github.io/spring2025/)
+
 
 ::: {.callout-note appearance="simple"}
-**This presentation was made by Hadi Mohammad, Digital Technologies Director of Factory 4.0, Pratt & Whitney for MAE 6291-Spring 2025 and CSCI 4907-Spring 2024.**
+**This presentation was made by Hadi Mohammad, Former Digital Technologies Director of Factory 4.0, Pratt & Whitney for MAE 6291-Spring 2025.**
 :::
 ![](Notes/IIOT_GWU_presentation_02172024.pdf){width="100%" height="800px"}
 
