--- a/schedule.qmd
+++ b/schedule.qmd
@@ -202,16 +202,10 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li>Layers in IoT systems - 3 level  layer model</li>
           <li>Sensors</li>
           <li>Sensor types and considerations</li>
-          <li>Understanding Analog and Digital Signals</li>
-          <li>Fundamentals of signal visualization in time and frequency</li> 
-          <li>Sensors</li>
-          <li>Sensor types and considerations</li>
-          <li>Understanding Analog and Digital Signals</li>
-          <li>Fundamentals of signal visualization in time and frequency</li> 
-          <li>Guest lecture: 
-          <!-- **Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis** by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf"
-          target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a> -->
-          </li>        
+          <li>**Guest lecture:** *Protocol for point-to-point communication between two devices* by <a href="/Lectures_Speakers/JitishKolanjery-bio-Feb122025.pdf" target="_blank">Jitish Kolanjery</a></li>
+          <!-- <li>Guest lecture: <a href="Week4-Yanamadala-ARM-Lecture.qmd" target="_blank">**Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis**</a> by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf" target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a></li>      -->  
+          <!--<li>   **Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis** by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf"
+          target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a> --></li>        
           <!-- <li>Guest lecture: <a href="Week4-Yanamadala-ARM-Lecture.qmd" target="_blank">**Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis**</a> by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf" target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a></li>      -->
           <li> Discussion of Midterm Projects and setting course for updates and reporting</li>
           <!-- <li style="color:black"><a href="Week4.qmd" style="color:red;" target="_blank">Week-4 Notes</a></li> -->
@@ -235,6 +229,8 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       <th scope="row">Week 5 [02/19/2025]</th>
       <td>
         <ul>
+          <li>Understanding Analog and Digital Signals</li>
+          <li>Fundamentals of signal visualization in time and frequency</li> 
           <li>Guest lecture: 
           <!-- **Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications** by <a href="/Lectures_Speakers/HadiImran-bio-Feb232024.pdf" target="_blank">Hadi Mohammed</a>, Digital Technologies Director of Factory 4.0 <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a> -->
           </li> 
