--- a/schedule.qmd
+++ b/schedule.qmd
@@ -146,11 +146,11 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li style="color:black">Python skelton code for running programs on the Raspberry Pi</li>
           <li style="color:black">Recap of some programming constructs</li>
           <li style="color:black">Using Thonny to blink LEDs</li>
-          <li><a href="Week2.qmd" style="color:red;" target="_blank">Week-2 Notes</a></li>
+          <!-- <li><a href="Week2.qmd" style="color:red;" target="_blank">Week-2 Notes</a></li>
           <li>**Guest lecture:** *Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications*
           by <a href="/Lectures_Speakers/HadiImran-bio-Jan292025.pdf" target="_blank">Hadi Mohammed</a>, Business Relations Manager and Former Digital Technologies Director of Factory 4.0, <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a>
           </li>          
-          <li style="color:black"><a href="Week2-Mohammad-PrattWhitney-Lecture.qmd" style="color:red;" target="_blank">Week2-Mohammad-PrattWhitney-Lecture</a></li>
+          <li style="color:black"><a href="Week2-Mohammad-PrattWhitney-Lecture.qmd" style="color:red;" target="_blank">Week2-Mohammad-PrattWhitney-Lecture</a></li> -->
         </ul>
       </td>
       <td>
@@ -163,7 +163,16 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       </td>
       <!--- <td>Column content</td> -->
     </tr>
-
+    <tr class="table-secondary">
+      <th scope="row"> Week 2 [01/29/2025]</th>
+      <td colspan="2" style="text-align: center">
+          **Guest lecture:** *Intersection of Industry 4.0 and Technology for Manufacturing in day-to-day applications*
+          by <a href="/Lectures_Speakers/HadiImran-bio-Jan292025.pdf" target="_blank"> Hadi Mohammed</a>, <br> Business Relations Manager and Former Digital Technologies Director of Factory 4.0, <a href="https://prattwhitney.com" target="_blank">Pratt and Whitney</a>      
+          <br> 
+          **Slide deck:** <a href="Week2-Mohammad-PrattWhitney-Lecture.qmd" style="color:red;" target="_blank">Week2-Mohammad-PrattWhitney-Lecture</a></li>
+      </td>
+      <!--- <td>Column content</td> -->
+    </tr>
     <tr class="table-secondary">
       <th scope="row">Week 3 [02/05/2025]</th>
       <td>
@@ -202,7 +211,6 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
           <li>Layers in IoT systems - 3 level  layer model</li>
           <li>Sensors</li>
           <li>Sensor types and considerations</li>
-          <li>**Guest lecture:** *Protocol for point-to-point communication between two devices* by <a href="/Lectures_Speakers/JitishKolanjery-bio-Feb122025.pdf" target="_blank">Jitish Kolanjery</a></li>
           <!-- <li>Guest lecture: <a href="Week4-Yanamadala-ARM-Lecture.qmd" target="_blank">**Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis**</a> by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf" target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a></li>      -->  
           <!--<li>   **Anatomy of a real life IoT attack - Side Channel Attack (SCA) Analysis** by <a href="/Lectures_Speakers/Chowdary-bio-Feb162024.pdf"
           target="_blank">Chowdary  Yanamadala</a>, Technology Strategist <a href="https://arm.com" target="_blank">ARM</a> --></li>        
@@ -224,7 +232,16 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
         </ul>
       </td>
     </tr>
-    
+    <tr class="table-secondary">
+      <th scope="row"> Week 4 [02/12/2025]</th>
+      <td colspan="2" style="text-align: center">
+          **Guest lecture:** *Protocol for point-to-point communication between two devices* by <a href="/Lectures_Speakers/JitishKolanjery-bio-Feb122025.pdf" target="_blank"> Jitish Kolanjery</a> 
+          <br>
+          <a href="https://www.linkedin.com/in/jitish-kolanjery/" target="_blank">Speaker's LinkedIn Profile</a>  
+          
+          <!-- **Slide deck:** <a href="Week2-Mohammad-PrattWhitney-Lecture.qmd" style="color:red;" target="_blank">Week2-Mohammad-PrattWhitney-Lecture</a></li> -->
+      </td>
+    </tr>
 <tr class="table-secondary">
       <th scope="row">Week 5 [02/19/2025]</th>
       <td>
@@ -272,7 +289,7 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       <td colspan="2" style="text-align: center">Spring Break. 
       <br><strong>No class this week</strong></td> 
       <!--- <td>Column content</td> -->
-    </tr>
+</tr>
 
 
   
