--- a/Week4-JitishKolanjery-Google-Lecture.qmd
+++ b/Week4-JitishKolanjery-Google-Lecture.qmd
@@ -12,6 +12,11 @@ Kolanjery, Jitish (2025, February 12). Protocol for point-to-point communication
 :::
 ![](Notes/Protocol Design_GWU_presentation_02132025.pdf){width="100%" height="800px"}
 
+::: {.callout-note appearance="simple"}
+**This is a recording of the presentation was made by Jitish Kolanjery, Senior Software Engineer, Google Inc., for MAE 6291-Spring 2025.**
+{{< video /media/video/JitishKolanjery_02122025_ProtocolDesign.mp4 >}}
+:::
+
 <!-- <footer>
   <p>This is a Quarto website. To learn more about Quarto websites visit <https://quarto.org/docs/websites>.<br>
   Author: Kartik Bulusu<br>
