--- a/schedule.qmd
+++ b/schedule.qmd
@@ -373,7 +373,49 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       <!-- <br><strong><a href="Downloads/AlZaabi_AlmayoofSpring2023_ProjectReport.pdf" style="color:red;" target="_blank">Sample project report</a>
       </strong></td> -->
 </tr>
-  
+
+<tr class="table-secondary">
+      <th scope="row">Week 9 [03/26/2025]</th>
+      <td>
+        <ul>
+          <!-- <li>Guest lecture: <a href="Week6-Nuzum-Innovyz-Lecture.qmd" target="_blank">**Empowering IoT and Edge Computing with Design Thinking**</a> by <a href="/Lectures_Speakers/Nuzum-bio-Feb2024.pdf" target="_blank">Scott Nuzum</a>, Senior Leader, <a href="https://www.innovyzusa.com" target="_blank">Innovyz USA</a></ li>  -->
+        <li>Introduction to Matrices</li>
+        <li>scipy.fftpack</li>
+        <li>Mosquitto – Open source MQTT broker</li>   
+        <li>Sneak preview of the senseHat</li>    
+        <li style="color:black"><a href="Week9.qmd" style="color:red;" target="_blank">Week-9 Notes</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>      
+        <li><strong>In-class edge compute using scipy [Graded Lab Activity]</strong></li>   
+        <li><strong>In-class MQTT on Raspberry Pi  using Mosquitto MQTT [Graded Lab Activity]</strong></li>
+        <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW5: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW5 Assigned: 03/01/2024; HW5 Due: 02/08/2024</strong> -->
+        </ul>
+      </td>
+      <!--- <td>Column content</td> -->
+    </tr>
+
+<tr class="table-secondary">
+      <th scope="row">Week 10 [04/2/2025]</th>
+      <td>
+        <ul>
+        <li>Guest lecture: **Post model Edge AI for Fisheries management** by  <a href="/Lectures_Speakers/ChrisRodley-bio-April2025.pdf" target="_blank">Chris Rodley</a>, CEO and Founder, Snap Information Technologies Ltd., <a href="www.snapcore.co" target="_blank">SnapCore</a></li>   
+        <li>Mosquitto – Open source MQTT broker</li>   
+        <li>The Eclipse Paho Project – Open source MQTT Implementation</li> 
+        <li>senseHat</li>    
+        <!-- <li style="color:black"><a href="Week9.qmd" style="color:red;" target="_blank">Week-9 Notes</a></li> -->
+        </ul>
+      </td>
+      <td>
+        <ul>      
+        <li><strong>In-class MQTT on Raspberry Pi using Paho MQTT [Graded Lab Activity]</strong></li>
+        <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW5: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW5 Assigned: 03/01/2024; HW5 Due: 02/08/2024</strong> -->
+        </ul>
+      </td>
+
+      <!--- <td>Column content</td> -->
+    </tr>
 <!-- <tr class="table-secondary">
       <th scope="row"> Week 13 [04/23/2025]</th>
       <td colspan="2" style="text-align: center">Final Project Presentations and Live Demos due.
