--- a/schedule.qmd
+++ b/schedule.qmd
@@ -349,7 +349,9 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
 <tr class="table-secondary">
       <th scope="row"> Week 8 [03/19/2025]</th>
       <td colspan="2" style="text-align: center">
-          **Guest lecture:** **Designing Hardware to Improve Your Software--A Use Case in Sound** by <a href="https://www.linkedin.com/in/jakewhitton/" target="_blank">Jacob Whitton</a>, Software Engineer, Jump Trading Corp.</li> <br>
+          **Guest lecture:** **Designing Hardware to Improve Your Software--A Use Case in Sound** 
+          
+          by <a href="https://www.linkedin.com/in/jakewhitton/" target="_blank">Jacob Whitton</a>, Software Engineer, Jump Trading Corp.<br>
 
           **Slide deck:** <a href="Week8-JakeWhitton-Demo-Lecture.qmd" style="color:red;" target="_blank">Week8-JakeWhitton-Demo-Lecture</a></li>
       </td>
@@ -397,25 +399,71 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
     </tr>
 
 <tr class="table-secondary">
-      <th scope="row">Week 10 [04/2/2025]</th>
+      <th scope="row">Week 10 [04/02/2025]</th>
       <td>
         <ul>
-        <li>Guest lecture: **Post model Edge AI for Fisheries management** by  <a href="/Lectures_Speakers/ChrisRodley-bio-April2025.pdf" target="_blank">Chris Rodley</a>, CEO and Founder, Snap Information Technologies Ltd., <a href="www.snapcore.co" target="_blank">SnapCore</a></li>   
+        <!-- <li>Guest lecture: **Post model Edge AI for Fisheries management** by  <a href="/Lectures_Speakers/ChrisRodley-bio-April2025.pdf" target="_blank">Chris Rodley</a>, CEO and Founder, Snap Information Technologies Ltd., <a href="www.snapcore.co" target="_blank">SnapCore</a></li>    -->
         <li>Mosquitto – Open source MQTT broker</li>   
         <li>The Eclipse Paho Project – Open source MQTT Implementation</li> 
-        <li>senseHat</li>    
-        <!-- <li style="color:black"><a href="Week9.qmd" style="color:red;" target="_blank">Week-9 Notes</a></li> -->
+        <li>Experiments with senseHat</li>    
+        <li style="color:black"><a href="Week10.qmd" style="color:red;" target="_blank">Week-10 Notes</a></li>
         </ul>
       </td>
       <td>
         <ul>      
-        <li><strong>In-class MQTT on Raspberry Pi using Paho MQTT [Graded Lab Activity]</strong></li>
+        <li><strong>In-class MQTT on Raspberry Pi using Mosquitto- and Paho-MQTT [Graded Lab Activity]</strong></li>
+        <li>Create the Edge-lab-messenger inspired by Facebook messenger</li>
+        <li>Explore senseHat</li>
+        <li>In-class Raspberry PI - paho MQTT</li>
+        <li>Publish and subscribe senseHat data</li>
         <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW5: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW5 Assigned: 03/01/2024; HW5 Due: 02/08/2024</strong> -->
         </ul>
       </td>
-
       <!--- <td>Column content</td> -->
     </tr>
+<tr class="table-secondary">
+      <th scope="row"> Week 10 [04/02/2025]</th>
+      <td colspan="2" style="text-align: center">
+          **Guest lecture:** **Post model Edge AI for Fisheries management** 
+          
+          by  <a href="/Lectures_Speakers/ChrisRodley-bio-April2025.pdf" target="_blank">Chris Rodley</a>, CEO and Founder, Snap Information Technologies Ltd., <a href="https://www.snapcore.co" target="_blank">SnapCore</a><br> 
+
+          <!-- **Slide deck:** <a href="Week10-ChrisRodley-Lecture.qmd" style="color:red;" target="_blank">Week8-JakeWhitton-Demo-Lecture</a> -->
+      </td>
+    </tr>
+<tr class="table-secondary">
+      <th scope="row">Week 11 [04/09/2025]</th>
+      <td>
+        <ul>
+          <li>Discussion on Final Projects and setting course for updates and reporting</li>
+          <li>Understand key differences between Microprocessors and Microcontrollers</li>
+          <li>Introduction to Micropython</li>  
+          <!-- <li style="color:black"><a href="Week11.qmd" style="color:red;" target="_blank">Week-11 Notes</a></li> -->
+        </ul>
+      </td>
+      <td>
+        <ul>      
+          <li>Introduction to the ESP32 microcontroller</li>
+          <li>Setting up Micropython interpreter in Thonny IDE </li>
+          <li>Flashing the firmware on the ESP32 microcontroller</li>
+          <li><strong>In-class lab set-up of ESP32 microcontroller with the Raspberry Pi 4B [Graded Lab Activity]</strong></li>
+        <!-- <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW5: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW5 Assigned: 03/01/2024; HW5 Due: 02/08/2024</strong> -->
+        </ul>
+      </td>
+      <!--- <td>Column content</td> -->
+    </tr>
+
+<tr class="table-secondary">
+      <th scope="row"> Week 11 [04/09/2025]</th>
+      <td colspan="2" style="text-align: center">
+          **Guest lecture:** **FPGAs…What are they, How do they work, What do we do with them today, and Where will they go tomorrow?** 
+          
+          by <a href="/Lectures_Speakers/TomFarmer-bio-April2025.pdf" target="_blank">Professor Thomas Farmer</a>, Associate Professor of Practice, Director, MCIT Online Master’s Degree Program, <a href="https://directory.seas.upenn.edu/thomas-farmer/" target="_blank">University of Pennsylvania.</a><br> 
+
+          <!-- **Slide deck:** <a href="Week10-ChrisRodley-Lecture.qmd" style="color:red;" target="_blank">Week8-JakeWhitton-Demo-Lecture</a> -->
+      </td>
+    </tr>
+
 <!-- <tr class="table-secondary">
       <th scope="row"> Week 13 [04/23/2025]</th>
       <td colspan="2" style="text-align: center">Final Project Presentations and Live Demos due.
