--- a/schedule.qmd
+++ b/schedule.qmd
@@ -464,6 +464,37 @@ The Final Project deliverables are due on **December 05, 2023, 11:59 PM**. Check
       </td>
     </tr>
 
+<tr class="table-secondary">
+      <th scope="row">Week 12 [04/16/2025]</th>
+      <td>
+        <ul>
+          <li>Discussion on Final deliverbales and deadlines</li>
+          <li>UMQTT using ThingSpeak</li>  
+          <li style="color:black"><a href="Week12.qmd" style="color:red;" target="_blank">Week-12 Notes</a></li>
+        </ul>
+      </td>
+      <td>
+        <ul>      
+          <li><strong>In-class lab set-up of ESP32 microcontroller with the Raspberry Pi 4B [Graded Lab Activity]</strong></li>
+          <li>Using SenseHat with MQTT </li>
+          <li>In-class Raspberry Pi Lab – ThingSpeak MQTT </li>
+          <li><strong><a href="Downloads/LastName_ExecutiveSummary.docx" style="color:red;" target="_blank">HW7: Guest Lecture Summary [Download Template]</a></strong></li> <strong>HW7 Assigned: 03/16/2025; HW5 Due: 03/24/2025</strong> -->
+        </ul>
+      </td>
+      <!--- <td>Column content</td> -->
+    </tr>
+
+<tr class="table-secondary">
+      <th scope="row"> Week 12 [04/16/2025]</th>
+      <td colspan="2" style="text-align: center">
+          **Guest lecture:** **Innovation @ IOT + Human Behaviour + Finance** 
+          
+          by <a href="/Lectures_Speakers/AnuragBhatnagar-bio-April2025.pdf" target="_blank">Anurag Bhatnagar</a>, CEO and Co-founder, ShiftAltCap - An investment banking firm based in New Delhi, India<br> 
+
+          **Slide deck:** <a href="Week12-AnuragBhatnagar-ShiftAltCap-Lecture.qmd" style="color:red;" target="_blank">Week12-AnuragBhatnagar-ShiftAltCap-Lecture</a>
+      </td>
+    </tr>
+
 <!-- <tr class="table-secondary">
       <th scope="row"> Week 13 [04/23/2025]</th>
       <td colspan="2" style="text-align: center">Final Project Presentations and Live Demos due.
