--- a/index.qmd
+++ b/index.qmd
@@ -14,9 +14,19 @@ Bulusu, Kartik V. (2025, January). MAE 6291: Internet-of-Things for Engineers. [
 :::
 
 :::{.callout-important}
-**Registartion:**
-Course registation is NOW OPEN.
+<!-- **Registartion:**
+Course registation is NOW OPEN. -->
 <!-- [Registration link](https://events.vtools.ieee.org/event/register/437187) -->
+**Expectations on students' final deliverables:**
+
+1. **[Upload by 11:00 AM on April 23, 2025]** Final project presentation **[25 points]**
+2. **[Upload by 11:00 AM on April 23, 2025]** Final project 2-minute video **[25 points]**
+3. **[April 23, 2025]** Final project demo **[Tied to #1]**
+4. **[Upload by April 24, 2025]** Executive summary **[10 points]** 
+5. **[Upload on April 28, 2025]** Final project written report **[25 points]**
+6. **[Upload on April 30, 2025]** Journal paper reviews by Grad students **[10 points]**  
+7. **[On Google form]** Share the Github repo of midterm and final projects **[Tied to #1]**
+8. **Attendance and no extensions**
 :::
 
 <style>
